--- a/assets/styles/layouts/_header.scss
+++ b/assets/styles/layouts/_header.scss
@@ -1,8 +1,12 @@
+.text-shadow {
+    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
+}
 .menu-my-menu-container{
 	width: 100%;
 	ul{
 		width: 50%;
 		display: table;
+		margin: 0 auto;
 		li{
 			display: table-cell;
 			text-align: center;
