--- a/assets/styles/common/_variables.scss
+++ b/assets/styles/common/_variables.scss
@@ -1,3 +1,10 @@
+@font-face{
+    font-family:flexslider-icon;
+    src:url(../fonts/flexslider-icon.eot);
+    src:url(../fonts/flexslider-icon.eot?#iefix) format("embedded-opentype"),url(../fonts/flexslider-icon.woff) format("woff"),url(fonts/flexslider-icon.ttf) format("truetype"),url(fonts/flexslider-icon.svg#flexslider-icon) format("svg");
+    font-weight:400;
+    font-style:normal
+}
 // Grid settings
 $main-sm-columns:       12;
 $sidebar-sm-columns:    4;
